--- a/prova_tutorial_Eleonor.ipynb
+++ b/prova_tutorial_Eleonor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "69b58bec",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1895489a",
    "metadata": {},
    "outputs": [],
    "source": [
     "no_vale = \"no anem bé\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0eb40686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anem bé,no anem bé\n"
+     ]
+    }
+   ],
+   "source": [
+    "seguim = \"seguim bé\"\n",
+    "\n",
+    "seguim1 = Vale + \",\" + no_vale\n",
+    "\n",
+    "print(seguim1)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
