--- a/prova_tutorial_Eleonor.ipynb
+++ b/prova_tutorial_Eleonor.ipynb
@@ -41,6 +41,25 @@
     "\n",
     "print(seguim1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa9d54fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, anem bé i no anem bé i anem bé,no anem bé\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hola = \"Hola, \" + Vale + \" i \" + no_vale + \" i \" + seguim1\n",
+    "print(Hola)"
+   ]
   }
  ],
  "metadata": {
